--- a/Count_Of_Director_Actor_Movies.ipynb
+++ b/Count_Of_Director_Actor_Movies.ipynb
@@ -353,7 +353,10 @@
    "id": "abaf6851",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Select *\n",
+    "from transactions over (partition by Category order by Price desc range "
+   ]
   },
   {
    "cell_type": "code",
@@ -361,7 +364,9 @@
    "id": "95ee4aa7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "1000  "
+   ]
   }
  ],
  "metadata": {
